# MedQuant

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  pyproject.toml
.claude/commands/: bridge.md
config/: gpu_config.yaml  mac_config.yaml
docs/: CHPC-setup.md  CODEX-MEQUANT-REVIEW.md  DECISIONS.md  architecture.md  dataset.md  project-spec.md  session-plan.md
scripts/: poc_gpu_check.py  sync_from_chpc.sh  sync_to_chpc.sh
slurm/: convert.sbatch  eval.sbatch  launch_eval.sh  poc_check.sbatch  train.sbatch
src/data/: contamination_check.py  formatter.py  loader.py
tests/: test_data.py
verify/: HOW_TO_VERIFY.md  MEDQUANT-SESSION-CHECKLIST.md  eval_cb_packet.py
verify/ground_truth/: session_1.json
